# rune-terminal

./: .air.toml  .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  REVIEW copy.md  REVIEW.md  SECURITY.md  eslint.config.mjs  go.mod  go.sum  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
docs/: README.md  agent-modes.md  approval-intent-binding-baseline.md  architecture.md  attachment-ui-baseline.md  attachments-contract-baseline.md  attachments-reference-result.md  conversation-pruning-baseline.md  conversation-reload-baseline.md  current-behavior.md  dependency-hygiene-baseline.md  domain-model.md  electron-cleanup-baseline.md  execution-contract.md  feature-parity-audit.md  frontend-active-path-guardrails.md  frontend-agent-slice-baseline.md  frontend-aidroppedfiles-subslice.md  frontend-aipanel-visibility-baseline.md  frontend-api-contract.md  frontend-approval-action-validation.md  frontend-asset-pipeline-validation.md  frontend-audit-slice-baseline.md  frontend-compat-console-slice.md  frontend-compat-facade-baseline.md  frontend-compat-facade-usage.md  frontend-compat-modal-parity-slice.md  frontend-compat-terminal-runtime-slice.md  frontend-component-batch-plan.md  frontend-migration-scope.md  frontend-post-finish-workspace-audit.md  frontend-primitive-batch-plan.md  frontend-stabilization-baseline.md  frontend-stabilization-result.md  frontend-stabilization-slice2-result.md  (+86 more)
(+1334 files in other folders)
