[package]
name = "rterm-desktop"
version = "0.1.0"
description = "RunaTerminal desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3" }
thiserror = "2.0"
anyhow = "1.0"
