[package]
name = "rterm-desktop"
version = "0.1.0"
description = "RunaTerminal desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0"
anyhow = "1.0"
ctrlc = { version = "3.4", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
